Ensure dropdown-divider is visible only when there are list items

--- a/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
+++ b/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
@@ -183,6 +183,12 @@ header {
               color: $text-default;
             }
           }
+
+          &:first-child {
+            .dropdown-divider {
+              display: none;
+            }
+          }
         }
 
         @media (max-width: 991px) {
